argocd/01-argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app: argocd
    istio-injection: disabled
---
