argocd/04-argocd-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-lb
  namespace: argocd
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress
---
