argocd/01-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-prd"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.org/ssl-services: "argocd-server"
    nginx.org/grpc-services: "argocd-server"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - stronghold.jakwifi.id
    secretName: argocd-server-tls
  rules:
  - host: stronghold.jakwifi.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
---
