argocd/06-argocd-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gw
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      name: http-argocd
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "argocd.app.example.id"
  - port:
      name: https-argocd
      number: 443
      protocol: HTTPS
    tls:
      credentialName: argocd-server-tls
      mode: SIMPLE
    hosts:
    - "argocd.app.example.id"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "argocd.app.example.id"
  gateways:
  - argocd-gw
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
